update bbb-setup and add setup for bbb0.81